intial home page set up

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Document</title>
 </head>
 <body>
-    
+  <section id="landing-area">
+    <h1 class="heading">Ping Pong Game</h1>
+    <br>
+    <div class="button-outer">
+        <button class='button' id='play-btn' aria-label="Play the game">Play</button>
+        <br>
+        <button class='button' id='leaderboard-btn' aria-label="Go to the leaderboard">Leaderboard</button>
+    </div>
+</section>
 </body>
 </html>
