created table, ball and bats

--- a/pong.html
+++ b/pong.html
@@ -9,6 +9,6 @@
     <h1>Ping Pong Game</h1>
     <canvas id="ping-pong" width="600" height="400"></canvas>
     <p>Control the left player with the up and down arrow keys</p>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
