collison on bat & ball, score increase, game reset

--- a/pong.html
+++ b/pong.html
@@ -6,9 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div style="text-align: center;">
     <h1>Ping Pong Game</h1>
     <canvas id="ping-pong" width="600" height="400"></canvas>
-    <p>Control the left player with the up and down arrow keys</p>
+    <p>Control the left player with your mouse</p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
