--- a/pong.html
+++ b/pong.html
@@ -5,6 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body {
+        background: url("https://www.psdgraphics.com/file/stadium-floodlights.jpg") no-repeat center center;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+    }
+
+    canvas {
+        max-width: 100%;
+    }
+
+    h1 {
+        color: white;
+        font-family: 'Fantasy', sans-serif;
+    }
+
+    p {
+        color: white;
+        font-family: 'Fantasy', sans-serif;
+    }
+</style>
 <body>
     <div style="text-align: center;">
     <h1>Ping Pong Game</h1>
