--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  <section id="landing-area">
-    <h1 class="heading">Ping Pong Game</h1>
-    <div class="button-outer">
-        <button class='button' id='play-btn' aria-label="Play the game">Play</button>
-        <br>
+  <div id="landing-area">
+    <div class="heading">
+      <h1>Ping Pong Game</h1>
+    </div>
+    <div class="button-section">
+        <a href="pong.html" target="_blank"><button class='button' id='play-btn' aria-label="Play the game">Play</button>
         <button class='button' id='leaderboard-btn' aria-label="Go to the leaderboard">Leaderboard</button>
     </div>
-</section>
+  </div>
 </body>
 </html>
