--- a/pong.html
+++ b/pong.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <style>
+
+    /*background image, canvas responsiveness and text styling */
+
     body {
-        background: url("https://www.psdgraphics.com/file/stadium-floodlights.jpg") no-repeat center center;
+        background: url("https://www.psdgraphics.com/file/stadium-floodlights.jpg") no-repeat center;
         background-size: cover;
         display: flex;
         justify-content: center;
@@ -29,11 +32,11 @@
         font-family: 'Fantasy', sans-serif;
     }
 </style>
-<body>
+<body> 
     <div style="text-align: center;">
-    <h1>Ping Pong Game</h1>
-    <canvas id="ping-pong" width="600" height="400"></canvas>
-    <p>Control the left player with your mouse</p>
+        <h1>Ping Pong Game</h1>
+        <canvas id="ping-pong" width="600" height="400"></canvas>
+        <p>Control the left player with your mouse</p>
     </div>
     <script src="script.js"></script>
 </body>
