adding to readme, testing code

--- a/pong.html
+++ b/pong.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ping Pong Game</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/PP-Favicon.png">
 </head>
 <style>
 
-    /*background image, canvas responsiveness and text styling */
+    /* Game Page background image, canvas responsiveness and text styling */
 
     body {
         background: url("https://www.psdgraphics.com/file/stadium-floodlights.jpg") no-repeat center;
@@ -25,11 +26,13 @@
     h1 {
         color: white;
         font-family: 'Fantasy', sans-serif;
+        text-shadow: 2px 2px black;
     }
 
     p {
         color: white;
         font-family: 'Fantasy', sans-serif;
+        text-shadow: 2px 2px black;
     }
 </style>
 <body> 
