--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Document</title>
+  <title>Ping Pong Game</title>
+  <link rel="icon" type="image/x-icon" href="assets/images/PP-Favicon.png">
 </head>
 <body>
   <div id="landing-area">
     <div class="heading">
       <h1>Ping Pong Game</h1>
-  </div>
-
-  <div class="button-section">
-      <a href="pong.html" target="_blank"><button class='button' id='play-btn' aria-label="Play the game">Play</button>
-      <button class='button' id='leaderboard-btn' aria-label="Go to the leaderboard">Leaderboard</button>
+    </div>
+    <div class="button-section">
+      <a class="button" aria-label="Play the game" href="pong.html" target="_blank">Play</a>
     </div>
   </div>
 </body>
